default/objects/success__Behaviour_Objective__c/success__Behaviour_Objective__c.object-meta.xml
<CustomObject>
    <description>Behaviour objectives monitor the progress towards targets that are set on individual Behaviours. Targets can be dynamically derived for Behaviour Objectives based on current performance, as well as being set manually.</description>
    <label>Behaviour Objective</label>
    <nameField>
        <displayFormat>BO-{00000}</displayFormat>
        <label>Behaviour Objectives Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behaviour Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>