default/objects/success__Behaviour_Objective__c/fields/success__Behaviour__c.field-meta.xml
<CustomField>
    <fullName>success__Behaviour__c</fullName>
    <label>Behaviour</label>
    <referenceTo>success__Team_Achievement__c</referenceTo>
    <relationshipLabel>Behaviour Objective</relationshipLabel>
    <relationshipName>Behaviour_Objective</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>