default/objects/success__Behaviour_Objective__c/fields/success__Coaching_Plan__c.field-meta.xml
<CustomField>
    <fullName>success__Coaching_Plan__c</fullName>
    <label>Coaching Plan</label>
    <referenceTo>success__Coaching_Plan__c</referenceTo>
    <relationshipLabel>Behaviour Objectives</relationshipLabel>
    <relationshipName>Behaviour_Objectives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>