default/objects/success__Behaviour_Objective__c/fields/success__Target__c.field-meta.xml
<CustomField>
    <fullName>success__Target__c</fullName>
    <label>Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>