default/objects/success__Behaviour_Objective__c/validationRules/success__Target_must_be_present.validationRule-meta.xml
<ValidationRule>
    <fullName>success__Target_must_be_present</fullName>
    <active>true</active>
    <description>The Target field must be populated</description>
    <errorConditionFormula>ISBLANK(success__Target__c)</errorConditionFormula>
    <errorDisplayField>success__Target__c</errorDisplayField>
    <errorMessage>Please enter a Target</errorMessage>
</ValidationRule>